--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
+    tools:context="com.hssolution.paypaxxweb.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <WebView
@@ -16,5 +16,5 @@
         android:layout_height="fill_parent"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp"
-        />
+        tools:ignore="MissingConstraints" />
 </android.support.constraint.ConstraintLayout>
